Fixed styling issue with footer covering up bottom portfolio item

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,8 @@ img{
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
+  margin-bottom: 100px;
 }
 
 .portfolio-item{
@@ -130,6 +131,7 @@ img{
   border:4px solid var(--beige);
   border-radius: 10px;
   background-color: var(--sage);
+
 }
 
 .portfolio-item-img{
@@ -145,6 +147,7 @@ img{
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  text-decoration: none;
 }
 
 .portfolio-item-desc{
